@@ -1,6 +1,11 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  03 Jul 2002; Martin Schlemmer <azarah@gentoo.org> ebuild.sh: some ebuilds
+  like gcc do not use $S to build the package in, and this causes generated
+  .la files (libtool) to contain $WORKDIR in them.  We thus export $WORKDIR
+  in ebuild.sh as well, to go along with fixes to the libtool-portage patch.
+
   02 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: pkg_setup() now
   gets called before a tbz2 is installed, and pkg_preinst() and postinst() get
   called at the right times as well.
